Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45346

QNX 6.5 build broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.2
    • 5.4.2, 5.5.0
    • QPA
    • None
    • QNX 6.5
    • QNX
    • cd61b6c969dee74776ad7e9f3dcf1e1623b1059b

    Description

      qcc -Vgcc_ntoarmv7le -c -Wno-psabi -lang-c++ -g -fvisibility=hidden -fvisibility-inlines-hidden -Wc,-std=gnu++0x -Wall -W -D_REENTRANT -fPIC -shared -DQT_NO_CLIPBOARD -DQT_NO_MTDEV -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DQT_NO_USING_NAMESPACE -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_USE_BUNDLED_LIBPNG -DQT_ENABLE_HARFBUZZ_NG -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -I. -I../../include -I../../include/QtGui -I../../include/QtGui/5.4.2 -I../../include/QtGui/5.4.2/QtGui -Iimage -I../3rdparty/libpng -I../3rdparty/harfbuzz-ng/include -I../../include/QtCore/5.4.2 -I../../include/QtCore/5.4.2/QtCore -I../../include/QtCore -I.moc -I/opt/qnx650/target/qnx6/usr/include -I/opt/qnx650/target/qnx6/usr/include/freetype2 -I../../mkspecs/qnx-armle-v7-qcc -o .obj/qopenglfunctions_es2.o opengl/qopenglfunctions_es2.cpp
      opengl/qopengltexturehelper.cpp: In constructor 'QOpenGLTextureHelper::QOpenGLTextureHelper(QOpenGLContext*)':
      opengl/qopengltexturehelper.cpp:174: error: invalid conversion from 'void ( * )(GLenum, GLint, GLenum, GLsizei, GLsizei, GLint, GLenum, GLenum, const void*)' to 'void ( * )(GLenum, GLint, GLint, GLsizei, GLsizei, GLint, GLenum, GLenum, const GLvoid*)'

      Attachments

        For Gerrit Dashboard: QTBUG-45346
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            iamsergio Sergio Martins
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes